# smartwatch

./: .gitmodules  CMakeLists.txt  bluetooth.hpp  main.cc
